--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<li><a href="Paginas/sobreMi.html">Sobre mi</a>
 					<li><a href="Paginas/aficiones.html">Aficiones</a>
 					<li><a href="Paginas/trabajos.html">Trabajos</a>
+					<li><a href="Paginas/galeriaFotos.html">Galeria de Imagenes</a>
 				</ul>
 			</nav>
 		</div>
